--- a/src/html/components/meta/meta.html
+++ b/src/html/components/meta/meta.html
@@ -4,9 +4,11 @@
       content="Учебный сайт.">
 <meta property="og:description"
       content="Необходим для показа навыков.">
+<meta name="theme-color" content="#000000" />
 <meta name="description" content="Необходим для показа навыков.">
 <meta property="og:image" content="http://best-site/thumbnail.jpg">
 <meta property="og:url" content="@@webRoot/index.htm">
 <meta name="og:author" content="xopowen"/>
 <meta name="format-detection" content="telephone=no">
 <meta name="keywords" content='project of learn, xopowen'>
+<meta http-equiv="Cache-control" content="public">
